# exomem

./: .gitmodules  Cargo.toml
gui/: .gitignore  README.md
gui/sdl_metal/: Makefile  main.mm
ideas/: tag.py  tag.sh  tag.sql
ideas/src/: lib.rs
src/: gui.rs  lib.rs  main.rs
